Debugging and adding functionality

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="123dp"
             android:gravity="center"
-            android:text="@string/titele" />
+            android:text="@string/title" />
 
         <Switch
             android:id="@+id/swichan"
@@ -46,6 +46,13 @@
             android:layout_height="65dp"
             android:gravity="center"
             android:text="@string/btn" />
+
+        <TextView
+            android:id="@+id/count"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="@string/count" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
