add copy button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,5 +54,11 @@
             android:gravity="center"
             android:text="@string/count" />
 
+        <Button
+            android:id="@+id/coppy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/coppy" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
