--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,12 +47,20 @@
             android:gravity="center"
             android:text="@string/btn" />
 
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="5dip" />
+
         <TextView
             android:id="@+id/count"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="@string/count" />
+
+        <Space
+            android:layout_width="match_parent"
+            android:layout_height="5dip" />
 
         <Button
             android:id="@+id/coppy"
