--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,10 +63,10 @@
             android:layout_height="5dip" />
 
         <Button
-            android:id="@+id/coppy"
+            android:id="@+id/copy"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/coppy" />
+            android:text="@string/copy" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
