--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,14 +20,6 @@
             android:gravity="center"
             android:text="@string/title" />
 
-        <Switch
-            android:id="@+id/swichan"
-            android:layout_width="222dp"
-            android:layout_height="53dp"
-            android:gravity="center|left"
-            android:text="@string/swichan"
-            android:textSize="20dp" />
-
         <TextView
             android:id="@+id/answer"
             android:layout_width="match_parent"
@@ -63,10 +55,10 @@
             android:layout_height="5dip" />
 
         <Button
-            android:id="@+id/copy"
+            android:id="@+id/resetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/copy" />
+            android:text="@string/reset" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
